--- a/examen.html
+++ b/examen.html
@@ -144,17 +144,19 @@
             background-color: #ab000d;
             color: black;
             width: 100%;
+            position: fixed;
+            bottom: 0;
         }
         footer div{
             width: 100%;
             display: inline-block;
         }
         footer .icono_footer{
-            width: 20%;
+            width: 10%;
 
         }
         footer .input_footer{
-           width: 60%;
+           width: 70%;
         }
     </style>
 </head>
